Fri Jun 11 22:36:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* README: add a note about linking a library whose license is not
	  compatible with Ruby License.  [ruby-core:30662]

Sun Jun  6 19:55:21 2010  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_product): clear uninitialized elements in temporary
	  array.

Sat Jun  5 06:20:57 2010  Eric Hodel  <drbrain@segment7.net>

	* dir.c: Clarification of what '*' matches.  Patch by John Wells
	  <john.wells at greatworx.com>

Thu Jun  3 00:58:45 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/lib/dl/cparser.rb (parse_ctype): add backwards compatibility
	  by supporting "uint" types in the c parser. [ruby-core:29750]
	* test/dl/test_cparser.rb: adding a test for "uint" changes.

Wed Jun  2 11:40:02 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* compile.c (iseq_compile_each): should consider block on stack,
	  if block argument is passed.  [ruby-core:30534]

	* parse.c (arg_concat_gen): should append to nd_head, not to
	  nd_iter for NODE_BLOCK_PASS.

Fri Jun 11 07:34:25 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): test the result of LOCALTIME.

Mon May 31 15:07:18 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): Refix r28102: this breaks
	  r28039. test for [ruby-dev:41429] is added. [ruby-core:30516]

Mon May 31 02:17:54 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* insns.def (defined): respond_to_missing? may not be available
	  (for BasicObject instances).

Sun May 30 21:48:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): leave @data.  Assigning nil to
	  @data caused double closing error of the same IO in finalizer.  a
	  patch from Simon Nicholls.  [ruby-core:29395]

Sun May 30 16:54:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* file.c (rb_file_directory_p): update rdoc.  a patch from Ilkka
	  Laukkanen.  [ruby-core:30016]

Sat Jun  5 16:39:13 2010  Tanaka Akira  <akr@fsij.org>
